--- a/docs/workflow.qmd
+++ b/docs/workflow.qmd
@@ -19,9 +19,9 @@ format:
 
 The materials hereafter provide example for the integrated data model presented within:
 
-C. J. W McClure, B. W. Rolek, J. Fleischer. Composite population trends reveal status of wintering raptors in the Northwestern USA. 2023. Biological Conservation (in review).
+C. J. W. McClure, B. W. Rolek, J. Fleischer. Composite population trends reveal status of wintering raptors in the Northwestern USA. 2023. Biological Conservation (in review).
 
-These materials are archived online at (INSERT ZOTERO LINK after acceptance).
+Materials are archived online at (INSERT ZOTERO LINK after acceptance).
 
 Here we provide three examples of integrated data models that combine Winter Raptor Survey data and Christmas Bird Count data. See .R files for examples of models that only include WRS or CBC data.
 
